@@ -1,3 +1,9 @@
+2009-01-27  Donal K. Fellows  <dkf@users.sf.net>
+
+	* generic/tclOODefineCmds.c (Tcl_ClassSetConstructor):
+	[Bug 2531577]: Ensure that caches of constructor chains are cleared
+	when the constructor is changed.
+
 2009-01-06  Donal K. Fellows  <dkf@users.sf.net>
 
 	* generic/tclOOInfo.c (InfoObjectMethodsCmd,InfoClassMethodsCmd): Only
